# ai-document-analyzer

./: .gitignore  README.md  docker-compose.yml
app/: config.py  tasks.py  utils.py
backend/: .env.example  Dockerfile  pyproject.toml  requirements_import.txt
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_object_key_and_clauses_jsonb.py
backend/app/: config.py  models.py  storage.py  tasks.py  utils.py
backend/app/analyzer/: document_repository.py  llm_analyzer.py  routes.py  schemas.py  templates.py
backend/app/auth/: service.py
backend/tests/: conftest.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: auth.ts  documents.ts
frontend/src/pages/: ClausesPage.tsx  DocumentDetailPage.tsx  DocumentListPage.tsx  LoginPage.tsx  RegisterPage.tsx  UploadPage.tsx
