[project]
name = "tos-analyzer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    "sqlalchemy>=2.0.41",
    "alembic>=1.16.4",
    "psycopg2-binary>=2.9.0",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "celery[redis]>=5.5.3",
    "redis>=5.3.1",
    "pymupdf>=1.26.3",
    "langchain-google-genai>=2.1.8",
    "langchain-text-splitters>=0.3.9",
    "pyjwt>=2.10.1",
    "bcrypt>=4.3.0",
    "python-multipart>=0.0.20",
    "filetype>=1.2.0",
    "cachetools>=5.5.2",
    "limits[redis]>=5.4.0",
    "minio>=7.2.0",
    "langchain>=0.3.27",
    "amqp>=5.3.1",
    "annotated-types>=0.7.0",
    "anyio>=4.9.0",
    "autopep8>=2.3.2",
    "billiard>=4.2.1",
    "bottleneck>=1.5.0",
    "certifi>=2025.7.14",
    "charset-normalizer>=3.4.2",
    "click>=8.2.1",
    "click-didyoumean>=0.3.1",
    "click-plugins>=1.1.1.2",
    "click-repl>=0.3.0",
    "colorama>=0.4.6",
    "databases>=0.9.0",
    "deprecated>=1.2.18",
    "dnspython>=2.7.0",
    "docstring-parser>=0.17.0",
    "email-validator>=2.2.0",
    "fastapi-cli>=0.0.8",
    "fastapi-cloud-cli>=0.1.4",
    "flake8>=7.3.0",
    "google-ai-generativelanguage>=0.6.18",
    "google-api-core>=2.25.1",
    "google-auth>=2.40.3",
    "google-cloud-aiplatform>=1.106.0",
    "google-cloud-bigquery>=3.35.1",
    "google-cloud-core>=2.4.3",
    "google-cloud-resource-manager>=1.14.2",
    "google-cloud-storage>=2.19.0",
    "google-crc32c>=1.7.1",
    "google-genai>=1.27.0",
    "google-resumable-media>=2.7.2",
    "googleapis-common-protos>=1.70.0",
    "greenlet>=3.2.3",
    "grpc-google-iam-v1>=0.14.2",
    "grpcio>=1.73.1",
    "grpcio-status>=1.73.1",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httptools>=0.6.4",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.1",
    "idna>=3.10",
    "iniconfig>=2.1.0",
    "jinja2>=3.1.6",
    "jsonpatch>=1.33",
    "jsonpointer>=3.0.0",
    "kombu>=5.5.4",
    "langchain-core>=0.3.72",
    "langsmith>=0.4.8",
    "mako>=1.3.10",
    "markdown-it-py>=3.0.0",
    "markupsafe>=3.0.2",
    "mccabe>=0.7.0",
    "mdurl>=0.1.2",
    "motor>=3.7.1",
    "numexpr>=2.11.0",
    "numpy>=2.3.2",
    "orjson>=3.11.0",
    "packaging>=25.0",
    "passlib>=1.7.4",
    "pluggy>=1.6.0",
    "prompt-toolkit>=3.0.51",
    "proto-plus>=1.26.1",
    "protobuf>=6.31.1",
    "pyarrow>=19.0.1",
    "pyasn1>=0.6.1",
    "pyasn1-modules>=0.4.2",
    "pycodestyle>=2.14.0",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "pyflakes>=3.4.0",
    "pygments>=2.19.2",
    "pymongo>=4.13.2",
    "pytest>=8.4.1",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "requests-toolbelt>=1.0.0",
    "rich>=14.0.0",
    "rich-toolkit>=0.14.8",
    "rignore>=0.6.4",
    "rsa>=4.9.1",
    "sentry-sdk>=2.33.2",
    "shapely>=2.1.1",
    "shellingham>=1.5.4",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "starlette>=0.47.2",
    "tenacity>=8.5.0",
    "typer>=0.16.0",
    "typing-inspection>=0.4.1",
    "typing-extensions>=4.14.1",
    "tzdata>=2025.2",
    "urllib3>=2.5.0",
    "validators>=0.35.0",
    "vine>=5.1.0",
    "watchfiles>=1.1.0",
    "wcwidth>=0.2.13",
    "websockets>=15.0.1",
    "wrapt>=1.17.2",
    "zstandard>=0.23.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
